# llama-cpp-android

./: Readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  LLMAndroid.cpp
app/src/main/cpp/include/llama/: common.h
app/src/main/java/com/example/myllm/: LLMAndroid.kt  MainActivity.kt  MainViewModel.kt
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
